Add Google Analytics

--- a/cvApp/templates/cvApp/index.html
+++ b/cvApp/templates/cvApp/index.html
@@ -427,6 +427,8 @@
     <script src="{% static 'cvApp/scripts/main.js' %}"></script>
     <script src="{% static 'cvApp/js/terminal.js' %}"></script>
     <script src="{% static 'cvApp/js/email-me.js' %}"></script>
+    <script src="{% static 'cvApp/js/google-analytics.js' %}"></script>
+
 
 
 </html>
