Fix translation. Change social links logos

--- a/cvApp/static/cvApp/css/main.css
+++ b/cvApp/static/cvApp/css/main.css
@@ -1103,7 +1103,7 @@
   border-radius: 0.1875rem;
   padding: 11px 22px;
   cursor: pointer;
-  background-color: #888;
+  background-color: #fff;
   color: #FFFFFF; }
   .btn:hover, .btn:focus, .btn:active, .btn.active, .btn:active:focus, .btn:active:hover, .btn.active:focus, .btn.active:hover,
   .show > .btn.dropdown-toggle,
