--- a/cvApp/templates/cvApp/index.html
+++ b/cvApp/templates/cvApp/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Francisco CV</title>
+    <title>Francisco Seeber Portfolio</title>
     <link rel="icon" type="image/x-icon" href="{% static 'cvApp/images/technology.ico'%}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
       <div class="profile-page sidebar-collapse">
         <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
           <div class="container">
-            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Francisco CV</a>
+            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Portfolio</a>
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -82,7 +82,12 @@
       <div class="section">
         <div class="container">
           <div class="button-container">
-            <a class="btn btn-default btn-round btn-lg btn-icon" target="_blank" href="https://www.linkedin.com/in/francisco-seeber/" rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" target="_blank" href="https://www.linkedin.com/in/francisco-seeber/" rel="tooltip" title="Follow me on LinkedIn">
+              <img src="{% static 'cvApp/images/linkedin-circle.png' %}" alt="" />
+            </a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" target="_blank" href="https://www.upwork.com/freelancers/~01bda3b330373682a3/" rel="tooltip" title="Check my Upwork profile">
+              <img src="{% static 'cvApp/images/upwork_circle.png' %}" alt="" />
+            </a>
           </div>
         </div>
       </div>
@@ -428,7 +433,7 @@
     <script src="{% static 'cvApp/scripts/main.js' %}"></script>
     <script src="{% static 'cvApp/js/terminal.js' %}"></script>
     <script src="{% static 'cvApp/js/email-me.js' %}"></script>
-    <script src="{% static 'cvApp/js/google-analytics.js' %}"></script>
+<!--    <script src="{% static 'cvApp/js/google-analytics.js' %}"></script>-->
 
 
 
