--- a/cvApp/templates/cvApp/index.html
+++ b/cvApp/templates/cvApp/index.html
@@ -44,6 +44,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">{% trans "About" %}</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">{% trans "Skills" %}</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">{% trans "Experience" %}</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#reference">{% trans "References" %}</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">{% trans "Contact" %}</a></li>
                 {% get_current_language as CURRENT_LANGUAGE %}
                 {% get_available_languages as AVAILABLE_LANGUAGES %}
@@ -433,8 +434,13 @@
     <script src="{% static 'cvApp/scripts/main.js' %}"></script>
     <script src="{% static 'cvApp/js/terminal.js' %}"></script>
     <script src="{% static 'cvApp/js/email-me.js' %}"></script>
-<!--    <script src="{% static 'cvApp/js/google-analytics.js' %}"></script>-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2BZJZR3SWH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-
-
+      gtag('config', 'G-2BZJZR3SWH');
+    </script>
 </html>
