Fix Terminal formats and try to reload image on fail

--- a/cvApp/templates/cvApp/index.html
+++ b/cvApp/templates/cvApp/index.html
@@ -73,7 +73,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('{% static 'cvApp/images/coding-background.png' %}')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="{% static 'cvApp/images/pic01.jpg' %}" alt="Image"/></a></div>
+          <div id="profile-image" class="cc-profile-image"><a href="#"><img src="{% static 'cvApp/images/pic01.jpg' %}" alt="Image"/></a></div>
           <div class="h2 title">Francisco Seeber</div>
           <p class="category text-white">{% trans ".NET Developer / Python Developer / Freelancer" %}</p>
 <!--          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>-->
@@ -309,7 +309,6 @@
             <div class="window-controls" id="bar__buttons">
               <button class="bar__button close" id="bar__button--exit">&#10005;</button>
               <button class="bar__button minimize">&#9472;</button>
-              <button class="bar__button maximize">&#9723;</button>
             </div>
             <div id="terminal-title"></div>
           </section>
