--- a/cvApp/static/cvApp/css/main.css
+++ b/cvApp/static/cvApp/css/main.css
@@ -3361,6 +3361,21 @@ Created using IcoMoon - icomoon.io
   .modal.modal-mini .modal-profile.modal-profile-info {
     background-color: #2CA8FF; }
 
+.imageRot {
+   -webkit-animation:spin 0.6s ease-in-out;
+    -moz-animation:spin 0.6s ease-in-out;
+    animation:spin 0.6s ease-in-out;
+}
+@-moz-keyframes spin {
+    100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }
+}
+@keyframes spin {
+    100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }
+}
+
 .modal.modal-mini .modal-footer button {
   text-transform: uppercase; }
   .modal.modal-mini .modal-footer button:first-child {
