--- a/cvApp/templates/cvApp/skills_and_tools.html
+++ b/cvApp/templates/cvApp/skills_and_tools.html
@@ -5,7 +5,7 @@
             <div class="col-lg-2 col-sm-6 justify-content-center mt-3">
                     <div class="competence-card text-center mirror-face">
                         <div class="card-body">
-                            <img class="competence-img" alt="{{competence.title}} logo" src="{{competence.logo.url}}">
+                            <img onerror="this.onerror = null; this.src = this.src;" class="competence-img" alt="{{competence.title}} logo" src="{{competence.logo.url}}">
                             <p class="font-weight-normal pt-2 mb-0">{{competence.title}}</p>
                         </div>
                     </div>
