Fix terminal width in mobile. Add small text to indicate the user to click on map

--- a/cvApp/static/cvApp/css/main.css
+++ b/cvApp/static/cvApp/css/main.css
@@ -1123,7 +1123,7 @@
   .navbar .navbar-nav > a.btn.dropdown-toggle:focus,
   .show >
   .navbar .navbar-nav > a.btn.dropdown-toggle:hover {
-    background-color: #979797;
+    background-color: #fff;
     color: #FFFFFF;
     box-shadow: none; }
   .btn:hover,
