--- a/cvApp/templates/cvApp/index.html
+++ b/cvApp/templates/cvApp/index.html
@@ -224,6 +224,7 @@
     <div class="card card-body"  data-aos="fade-up" data-aos-anchor-placement="top-bottom" id="globeWrapper">
         <div id="globeContainer" style="text-align: -webkit-center;">
           <div id="globeViz"></div>
+          <div class="small" style="text-align: left;"><span>*Click the countries to see the reviews</span></div>
         </div>
         <div id="globeData" style="width: 49%">
           <h1 id="tableTitle"></h1>
