Fix some translations to Spanish

--- a/cvApp/templates/cvApp/index.html
+++ b/cvApp/templates/cvApp/index.html
@@ -103,8 +103,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">{% trans "About" %}</div>
-            <p>{% trans "Hello! My name is Francisco Seeber. I have been a programmer for more than 7 years. I am looking to work in companies where I can continue to expand my knowledge, work with new technologies and have opportunities to grow." %}</p>
-            <p>{% trans "I am interested in a wide range of technologies, and I like challenges that require research tasks. Constantly learning." %}</p>
+            <p>{% trans "Hello! My name is Francisco Seeber. I have been a programmer for more than 7 years. I am looking to participate in experiences where I can continue to broaden my knowledge, work with new technologies and have opportunities to grow." %}</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
